dx(quality): Added a watch command.
This watch command runs linting, testing, and counting as files
change.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "clean": "rimraf dist",
         "lint": "eslint -c .eslintrc.json src/",
         "test": "babel-tape-runner test/{,**/}*.js | tap-spec",
+        "watch": "nodemon --exec npm-run-all test lint sloc",
         "sloc": "echo 'Lines of source code: ' && sloc src/ --exclude node_modules -f json | jq '.summary.source'",
         "patch": "npm version patch -m 'v%s' && js-beautify -r package.json && git commit -a --amend --no-edit",
         "minor": "npm version minor -m 'v%s' && js-beautify -r package.json && git commit -a --amend --no-edit",
@@ -51,6 +52,7 @@
         "js-beautify": "^1.6.14",
         "node-jq": "^0.7.0",
         "nodemon": "^1.11.0",
+        "npm-run-all": "^4.0.2",
         "rimraf": "^2.6.1",
         "sloc": "^0.2.0",
         "tap-spec": "^4.1.1",
