--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "npm": ">=1.4.3"
     },
     "scripts": {
-        "prebuild": "npm run clean && mkdir -p dist/ && cp package.json yarn.lock LICENSE readme.md dist/",
+        "prebuild": "npm run clean && mkdir -p dist/ && cp yarn.lock LICENSE readme.md dist/ && cat package.json | jq 'del(.babel,.devDependencies,.scripts)' --indent 4 > dist/package.json",
         "build": "babel src/ -d dist/src",
         "clean": "rimraf dist",
         "lint": "eslint -c .eslintrc.json src/",
