refactor(transmute): Refactor the operators into their own files.

--- a/package.json
+++ b/package.json
@@ -66,7 +66,20 @@
             "es2017"
         ],
         "plugins": [
-            "wildcard"
+            [
+                "wildcard",
+                {
+                    "exts": [
+                        "js",
+                        "es6",
+                        "es",
+                        "jsx",
+                        "javascript",
+                        "json"
+                    ],
+                    "noCamelCase": true
+                }
+            ]
         ]
     }
 }
