--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
     },
     "dependencies": {
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "lodash": "^4.17.4"
     },
     "devDependencies": {
@@ -79,7 +80,8 @@
                     ],
                     "noCamelCase": true
                 }
-            ]
+            ],
+            "transform-object-rest-spread"
         ]
     }
 }
