--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "prebuild": "npm run clean && mkdir -p dist/ && cp yarn.lock LICENSE readme.md dist/ && cat package.json | jq 'del(.babel,.devDependencies,.scripts)' --indent 4 > dist/package.json",
         "build": "babel src/ -d dist/src",
         "clean": "rimraf dist",
+        "precommit": "npm-run-all test lint sloc",
         "lint": "eslint -c .eslintrc.json src/",
         "test": "babel-tape-runner test/{,**/}*.js | tap-spec",
         "watch": "nodemon --exec npm-run-all test lint sloc",
@@ -45,7 +46,7 @@
         "eslint-plugin-import": "^2.3.0",
         "eslint-plugin-jsx-a11y": "^5.0.3",
         "eslint-plugin-react": "^7.1.0",
-        "git-hooks": "^1.1.8",
+        "husky": "^0.14.3",
         "js-beautify": "^1.6.14",
         "node-jq": "^0.7.0",
         "nodemon": "^1.11.0",
