--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "build": "babel src/ -d dist/src",
         "clean": "rimraf dist",
         "precommit": "npm-run-all test lint sloc",
+        "commitmsg": "commitlint -e $GIT_PARAMS",
         "lint": "eslint -c .eslintrc.json src/",
         "test": "babel-tape-runner test/{,**/}*.js | tap-spec",
         "watch": "nodemon --exec npm-run-all test lint sloc",
@@ -35,6 +36,7 @@
         "lodash": "^4.17.4"
     },
     "devDependencies": {
+        "@commitlint/cli": "^5.1.1",
         "babel-cli": "^6.24.1",
         "babel-plugin-wildcard": "^2.1.2",
         "babel-preset-es2015": "^6.24.1",
