dx(build): Updated the commit message for releasing packages.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "test": "babel-tape-runner test/{,**/}*.js | tap-spec",
         "watch": "nodemon --exec npm-run-all test lint sloc",
         "sloc": "echo 'Lines of source code: ' && sloc src/ --exclude node_modules -f json | jq '.summary.source'",
-        "patch": "npm version patch -m 'v%s [skip ci]' && js-beautify -r package.json && git commit -a --amend --no-edit",
-        "minor": "npm version minor -m 'v%s [skip ci]' && js-beautify -r package.json && git commit -a --amend --no-edit",
-        "major": "npm version major -m 'v%s [skip ci]' && js-beautify -r package.json && git commit -a --amend --no-edit",
+        "patch": "npm version patch -m 'docs(version): Released v%s [skip ci].' && js-beautify -r package.json && git commit -a --amend --no-edit",
+        "minor": "npm version minor -m 'docs(version): Released v%s [skip ci].' && js-beautify -r package.json && git commit -a --amend --no-edit",
+        "major": "npm version major -m 'docs(version): Released v%s [skip ci].' && js-beautify -r package.json && git commit -a --amend --no-edit",
         "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
     },
     "dependencies": {
