--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "build": "babel src/ -d dist/src",
         "clean": "rimraf dist",
         "precommit": "npm-run-all test lint sloc",
+        "gcommit": "git-cz",
         "commitmsg": "commitlint -e $GIT_PARAMS",
         "lint": "eslint -c .eslintrc.json src/",
         "test": "babel-tape-runner test/{,**/}*.js | tap-spec",
@@ -37,12 +38,14 @@
     },
     "devDependencies": {
         "@commitlint/cli": "^5.1.1",
+        "@commitlint/prompt": "^5.1.2",
         "babel-cli": "^6.24.1",
         "babel-plugin-wildcard": "^2.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2016": "^6.24.1",
         "babel-preset-es2017": "^6.24.1",
         "babel-tape-runner": "^2.0.1",
+        "commitizen": "^2.9.6",
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^15.0.1",
         "eslint-plugin-import": "^2.3.0",
@@ -58,6 +61,11 @@
         "tap-spec": "^4.1.1",
         "tape": "^4.8.0",
         "tape-bdd": "^0.0.1"
+    },
+    "config": {
+        "commitizen": {
+            "path": "@commitlint/prompt"
+        }
     },
     "babel": {
         "presets": [
