--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2016": "^6.24.1",
         "babel-preset-es2017": "^6.24.1",
+        "babel-register": "^6.26.0",
         "babel-tape-runner": "^2.0.1",
         "commitizen": "^2.9.6",
+        "es6-promisify": "^5.0.0",
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^15.0.1",
         "eslint-plugin-import": "^2.3.0",
