--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "transmutation",
     "description": "Enhanced promises for immutable data processing, inspired by RxJS and Lodash.",
     "version": "0.0.40",
+    "main": "transmutation.cjs.js",
+    "module": "transmutation.esm.js",
+    "browser": "transmutation.umd.js",
     "homepage": "https://github.com/RayBenefield/transmutation",
     "author": {
         "name": "Raymond Benefield",
@@ -15,10 +18,9 @@
         "url": "https://github.com/RayBenefield/transmutation/issues"
     },
     "license": "MIT",
-    "main": "src/index.js",
     "scripts": {
-        "prebuild": "npm run clean && mkdir -p dist/ && cp yarn.lock LICENSE readme.md dist/ && cat package.json | jq 'del(.babel,.devDependencies,.scripts)' --indent 4 > dist/package.json",
-        "build": "babel src/ -d dist/src",
+        "prebuild": "npm run clean && mkdir -p dist/ && cp LICENSE readme.md dist/ && cat package.json | jq 'del(.babel,.devDependencies,.scripts,.config)' --indent 4 > dist/package.json",
+        "build": "rollup -c",
         "clean": "rimraf dist",
         "precommit": "npm-run-all test lint sloc",
         "gcommit": "git-cz",
@@ -32,14 +34,19 @@
         "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
     },
     "dependencies": {
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "lodash": "^4.17.4"
+        "lodash.get": "^4.4.2",
+        "lodash.has": "^4.5.2",
+        "lodash.mapvalues": "^4.6.0",
+        "lodash.mergewith": "^4.6.0",
+        "lodash.set": "^4.3.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^5.1.1",
         "@commitlint/prompt": "^5.1.2",
         "babel-cli": "^6.24.1",
+        "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-wildcard": "^2.1.2",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2016": "^6.24.1",
         "babel-preset-es2017": "^6.24.1",
@@ -56,10 +63,17 @@
         "nodemon": "^1.11.0",
         "npm-run-all": "^4.0.2",
         "rimraf": "^2.6.1",
+        "rollup": "^0.52.0",
+        "rollup-plugin-babel": "^3.0.2",
+        "rollup-plugin-commonjs": "^8.2.6",
+        "rollup-plugin-filesize": "^1.5.0",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-uglify": "^2.0.1",
         "sloc": "^0.2.0",
         "tap-spec": "^4.1.1",
         "tape": "^4.8.0",
-        "tape-bdd": "^0.0.1"
+        "tape-bdd": "^0.0.1",
+        "uglify-es": "^3.2.0"
     },
     "config": {
         "commitizen": {
@@ -68,9 +82,9 @@
     },
     "babel": {
         "presets": [
-            "es2015",
-            "es2016",
-            "es2017"
+            [
+                "env"
+            ]
         ],
         "plugins": [
             [
@@ -86,8 +100,7 @@
                     ],
                     "noCamelCase": true
                 }
-            ],
-            "transform-object-rest-spread"
+            ]
         ]
     }
 }
