--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
         "import"
     ],
     "rules": {
+        "import/no-unresolved": 0,
+        "import/no-extraneous-dependencies": 0,
         "no-plusplus": 0,
         "no-mixed-operators": 0,
         "no-param-reassign": 0,
