--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
         "commitmsg": "commitlint -e $GIT_PARAMS",
         "postrewrite": "./.travis/rewrite-tags.sh",
         "lint": "eslint -c .eslintrc.json src/",
-        "test": "babel-tape-runner test/{,**/}*.js | tap-spec",
+        "test": "cd src/node_modules && babel-tape-runner __tests__/{,**/}*.js | tap-spec",
         "watch": "nodemon --exec npm-run-all test lint sloc",
-        "sloc": "echo 'Lines of source code: ' && sloc src/ --exclude node_modules -f json | jq '.summary.source'",
+        "sloc": "echo 'Lines of source code: ' && sloc src/node_modules/ -f json  --exclude __tests__ | jq '.summary.source'",
         "postversion": "js-beautify -r package.json && PACKAGE_VERSION=$(cat package.json | jq '.version' --raw-output) && git commit -a -m \"docs(version): Release v$PACKAGE_VERSION.\" -m '[skip ci]' && git tag \"v$PACKAGE_VERSION\"",
         "postinstall": "node -e \"var s='../src',d='node_modules/src',fs=require('fs');fs.exists(d,function(e){e||fs.symlinkSync(s,d,'dir')});\""
     },
